--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 main {
   margin: auto 100px;
+  padding-bottom: 30px;
 }
 
 .headerLogo {
@@ -8,7 +9,30 @@ main {
 }
 
 .input-group {
-  margin: 0 10px;
+  margin: 0 auto;
+  width: calc(100% - 20px);
+}
+
+#search-input {
+  padding-right: 70px;
+  background: #e7e7e7;
+  border: none;
+}
+
+.form-floating button {
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  border: none;
+  background: #e7e7e7;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: max-content;
+}
+
+.form-floating button i {
+  font-size: 25px;
 }
 
 .dropdownContainer {
@@ -24,12 +48,16 @@ main {
   flex-grow: 0;
 }
 
+.btn i {
+  margin-left: 15px;
+}
+
 .btn:hover {
   transform: scale(1.04);
 }
 
 .grow {
-  flex-grow: 1;
+  width: max-content;
 }
 
 .headerDropdown {
@@ -45,6 +73,31 @@ main {
 
 #search-button:hover {
   transform: scale(1.04);
+}
+
+.tags-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.pill {
+  width: max-content;
+  padding: 8px 15px;
+  color: white;
+  font-weight: 500;
+  border-radius: 5px;
+  font-size: 13px;
+  margin: 10px;
+  margin-bottom: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.pill i {
+  margin-left: 12px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 .dropdown-content {
@@ -111,21 +164,32 @@ main {
   padding: 0 5px;
 }
 
-.btn-primary {
-  background: #3282f7;
+.bg-primary,
+.ingredients {
+  background: #3282f7 !important;
+  color: white;
 }
 
-.btn-success {
-  background: #68d9a4;
+.bg-success,
+.appliance {
+  background: #68d9a4 !important;
+  color: white;
 }
 
-.btn-danger {
-  background: #ed6454;
+.bg-danger,
+.ustensils {
+  background: #ed6454 !important;
+  color: white;
+}
+
+.title {
+  color: black;
 }
 
 .btn {
   border: none;
   padding: 10px 20px;
+  height: max-content;
 }
 
 #ingredientsDropdown {
@@ -161,6 +225,7 @@ main {
   background: #e7e7e7;
   border-radius: 5px;
   width: calc(95% / 3);
+  min-width: 400px;
 }
 
 .imgTop {
@@ -211,6 +276,41 @@ main {
   font-weight: bold;
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 8;
+  -webkit-line-clamp: 5;
   overflow: hidden;
+  height: fit-content;
+  cursor: pointer;
+}
+
+.showDescription {
+  display: flex !important;
+  height: max-content;
+}
+
+@media screen and (max-width: 1020px) {
+  main {
+    margin: auto 10px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .dropdown-content ul {
+    grid-template-columns: repeat(2, 1fr);
+    grid-row-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .mainCard {
+    min-width: 300px;
+  }
+
+  .bodyContent {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bodyContent ul, .bodyContent p {
+    width: 100%;
+  }
 }
