--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ main {
 
 .show {
   display: block;
+  position: absolute;
 }
 
 .cardsContainer {
@@ -225,8 +226,8 @@ main {
   margin: 10px;
   background: #e7e7e7;
   border-radius: 5px;
-  width: calc(95% / 3);
-  min-width: 400px;
+  width: calc(92% / 3);
+  min-width: 350px;
 }
 
 .imgTop {
